Add CI name and bump code-formatter to v5

--- a/.github/workflows/format-code.yml
+++ b/.github/workflows/format-code.yml
@@ -1,3 +1,5 @@
+name: code-formatter
+
 on:
   pull_request:
     types: [opened, edited, reopened, synchronize]
@@ -7,6 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: ministryofjustice/github-actions/code-formatter@v4
+      - uses: ministryofjustice/github-actions/code-formatter@v5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
