--- a/.github/workflows/management-account.yml
+++ b/.github/workflows/management-account.yml
@@ -24,6 +24,8 @@ jobs:
           role-session-name: GitHubActions
           aws-region: eu-west-2
       - uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.3.4
       - run: terraform fmt -check
         continue-on-error: true
       - run: terraform init
