--- a/.github/workflows/tflint.yml
+++ b/.github/workflows/tflint.yml
@@ -21,7 +21,7 @@ jobs:
           key: tflint-${{ hashFiles('.tflint.hcl') }}
       - uses: terraform-linters/setup-tflint@v2
         with:
-          tflint_version: v0.35.0
+          tflint_version: latest
       - run: tflint --version
       - run: tflint --init
       - run: tflint -f compact
