--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -19,6 +19,7 @@ jobs:
         with:
           sarif_file: tfsec.sarif
           working_directory: ${{ matrix.directory }}
+          tfsec_version: latest
       - uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: tfsec.sarif
