--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,19 +5,15 @@
 
 version: 2
 updates:
-  - package-ecosystem: "terraform" # See documentation for possible values
-    directory: "/terraform" # Location of package manifests
-    schedule:
-      interval: "daily"
-  - package-ecosystem: "terraform" # See documentation for possible values
-    directory: "/management-account/terraform" # Location of package manifests
-    schedule:
-      interval: "daily"
-  - package-ecosystem: "terraform" # See documentation for possible values
-    directory: "/organisation-security/terraform" # Location of package manifests
-    schedule:
-      interval: "daily"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "monthly"
+  - package-ecosystem: "terraform"
+    directory: "/management-account/terraform"
+    schedule:
+      interval: "monthly"
+  - package-ecosystem: "terraform"
+    directory: "/organisation-security/terraform"
+    schedule:
+      interval: "monthly"
