--- a/.github/workflows/management-account.yml
+++ b/.github/workflows/management-account.yml
@@ -31,3 +31,5 @@ jobs:
       - run: terraform init
       - run: terraform validate -no-color
       - run: terraform plan -no-color
+      - run: terraform apply -auto-approve
+        if: ${{github.event.pull_request.merged == 'true'}}
