Fix policy and apply
Policy was incorrectly named, apply was broken due to common fate.

Also a little bit of a tidy up.

--- a/.github/workflows/management-account-apply.yml
+++ b/.github/workflows/management-account-apply.yml
@@ -2,6 +2,9 @@ name: terraform apply (management-account)
 
 on:
   push:
+    paths:
+      - 'management-account/terraform/**'
+      - 'modules/**'
     branches:
       - main
 
