--- a/.github/workflows/management-account-plan.yml
+++ b/.github/workflows/management-account-plan.yml
@@ -2,6 +2,9 @@ name: terraform plan (management-account)
 
 on:
   pull_request:
+    paths:
+      - 'management-account/terraform/**'
+      - 'modules/**'
   workflow_dispatch:
 
 jobs:
