Add admin team to code owners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @ministryofjustice/operations-engineering
+* @ministryofjustice/operations-engineering @ministryofjustice/aws-root-account-admin-team
