✨ Add megalinter base code

--- a/.github/workflows/format-code.yml
+++ b/.github/workflows/format-code.yml
@@ -2,7 +2,7 @@ name: code-formatter
 
 on:
   pull_request:
-    types: [opened, edited, reopened, synchronize]
+    branches: [main]
 
 jobs:
   format-code:
