--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -26,6 +26,7 @@ ENABLE_LINTERS:
   - YAML_PRETTIER
   - YAML_YAMLLINT
 
+SARIF_REPORTER: true
 DISABLE_ERRORS: false
 MARKDOWN_MARKDOWN_LINK_CHECK_DISABLE_ERRORS: true
 SHOW_ELAPSED_TIME: true
