--- a/.github/workflows/organisation-security-apply.yml
+++ b/.github/workflows/organisation-security-apply.yml
@@ -3,10 +3,10 @@ name: terraform apply (organisation-security)
 on:
   push:
     paths:
-      - 'organisation-security/terraform/**'
-      - 'modules/**'
-      - '.github/workflows/organisation-security-plan.yml'
-      - '.github/workflows/organisation-security-apply.yml'
+      - "organisation-security/terraform/**"
+      - "modules/**"
+      - ".github/workflows/organisation-security-plan.yml"
+      - ".github/workflows/organisation-security-apply.yml"
     branches:
       - main
 
@@ -36,3 +36,13 @@ jobs:
       - run: terraform plan -no-color
       - run: terraform apply -auto-approve
         if: github.event.ref == 'refs/heads/main'
+
+      - name: Slack failure notification
+        if: ${{ failure() && github.ref == 'refs/heads/main' }}
+        uses: slackapi/slack-github-action@37ebaef184d7626c5f204ab8d3baff4262dd30f0 # v1.27.0
+        with:
+          payload: |
+            {"blocks":[{"type":"section","text":{"type":"mrkdwn","text":":x: *GitHub Workflow Failed!* \n\nA workflow has failed in the repository *<https://github.com/${{ github.repository }}|${{ github.repository }}>*.\n\n*Workflow:* `${{ github.workflow }}`\n*Branch:* `${{ github.head_ref }}`\n*Commit:* `${{ github.sha }}` - _${{ github.event.head_commit.message }}_\n*Author:* `${{ github.event.head_commit.author.name }}`"}},{"type":"actions","elements":[{"type":"button","text":{"type":"plain_text","text":"View Workflow"},"url":"https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}","style":"primary"},{"type":"button","text":{"type":"plain_text","text":"View Commit"},"url":"https://github.com/${{ github.repository }}/commit/${{ github.sha }}"}]}]}
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
