🔧 Fix `tflint` Not Being Able to init

--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -33,3 +33,4 @@ GITHUB_STATUS_REPORTER: true
 GITHUB_COMMENT_REPORTER: true
 VALIDATE_ALL_CODEBASE: false
 LOG_LEVEL: INFO
+TERRAFORM_TFLINT_UNSECURED_ENV_VARIABLES: [GITHUB_TOKEN]
