♻️ Move `tflint` into Megalinter (#988)

--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -18,6 +18,7 @@ ENABLE_LINTERS:
 
   # Terraform
   - TERRAFORM_TERRAFORM_FMT
+  - TERRAFORM_TFLINT
 
   # YAML
   - YAML_PRETTIER
@@ -32,3 +33,4 @@ GITHUB_STATUS_REPORTER: true
 GITHUB_COMMENT_REPORTER: true
 VALIDATE_ALL_CODEBASE: false
 LOG_LEVEL: INFO
+TERRAFORM_TFLINT_UNSECURED_ENV_VARIABLES: [GITHUB_TOKEN]
