--- a/organisation-security/terraform/cloudformation/OracleDbLTS-Orchestrate.yaml
+++ b/organisation-security/terraform/cloudformation/OracleDbLTS-Orchestrate.yaml
@@ -48,13 +48,13 @@ Parameters:
   IsDelegatedAdministrator:
     Type: String
     AllowedValues:
-    - 'true'
-    - 'false'
+      - 'true'
+      - 'false'
     Description: Specify if this solution is being deployed in a delegated adminstrator account. With this option you no longer need to be logged into the AWS Organizations management account to administer this solution.
   AdministratorAccountId:
     Description: (Required) AWS Organization's Management or Delegated Administrator account ID.
     Type: String
-    AllowedPattern : '^\d{12}$'
+    AllowedPattern: '^\d{12}$'
   TargetKey:
     Type: String
     Description: Specify which instances have to be targeted for this solution. Allowed values - ParameterValues, ResourceGroup or begin with tag:(default), AWS::EC2::Instance, InstanceIds, instanceids. To target all instances use InstanceIds. Refer https://docs.aws.amazon.com/systems-manager/latest/APIReference/API_Target.html for more details.
@@ -114,7 +114,7 @@ Resources:
         {"Version":"2012-10-17","Statement":[{"Sid":"","Effect":"Allow","Principal":{"Service":"ssm.amazonaws.com"},"Action":"sts:AssumeRole"}]}
       MaxSessionDuration: 3600
       ManagedPolicyArns: 
-      - !Sub "arn:${AWS::Partition}:iam::aws:policy/service-role/AmazonSSMAutomationRole"
+        - !Sub "arn:${AWS::Partition}:iam::aws:policy/service-role/AmazonSSMAutomationRole"
       Description: "OracleDbLTS-SystemsManagerAutomationAdministrationRole"
       Policies:
         - PolicyName: OracleDbLTS-AutomationAdministrationPolicy
@@ -158,7 +158,31 @@ Resources:
                 Resource: 
                   - !Sub 'arn:${AWS::Partition}:iam::${AWS::AccountId}:role/OracleDbLTS-SystemsManagerAutomationAdministrationRole'
                   - !Sub 'arn:${AWS::Partition}:iam::*:role/OracleDbLTS-SystemsManagerAutomationExecutionRole'
-  
+  StackSetAdministrationRole:
+    Type: "AWS::IAM::Role"
+    Properties:
+      Path: /
+      RoleName: OracleDbLTS-CloudFormation-StackSetAdministrationRole
+      AssumeRolePolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: cloudformation.amazonaws.com
+            Action:
+              - sts:AssumeRole
+      Policies:
+        - PolicyName: AdministrationPolicy
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Effect: Allow
+                Action:
+                  - sts:AssumeRole
+                Resource:
+                  - "arn:*:iam::*:role/OracleDbLTS-CloudFormation-StackSetExecutionRole"
+      Description: OracleDbLTS-CloudFormation-StackSetAdministrationRole to enable use of CloudFormation Stacksets
+
   ArtifactsS3:
     Type: "AWS::S3::Bucket"
     Properties:
@@ -210,7 +234,6 @@ Resources:
             Action: ['sts:AssumeRole']
       ManagedPolicyArns:
         - !Sub 'arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole'
-      Path: /
       Policies:
         - PolicyName: OracleDbLTS-CreateAssociationPermissionManagementLambdaPolicy
           PolicyDocument:
