added missing stack set execution role

--- a/organisation-security/terraform/cloudformation/OracleDbLTS-Orchestrate.yaml
+++ b/organisation-security/terraform/cloudformation/OracleDbLTS-Orchestrate.yaml
@@ -287,6 +287,64 @@ Resources:
                   - !Sub "arn:aws:s3:::${ArtifactsS3.Arn}/*"
                   - "arn:aws:s3:::pb-solution-artifacts/*"
                   - "arn:aws:s3:::pb-solution-artifacts"
+                  
+  StackSetExecutionRole:
+    Type: "AWS::IAM::Role"
+    Properties:
+      Path: /
+      RoleName: OracleDbLTS-CloudFormation-StackSetExecutionRole
+      AssumeRolePolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Effect: Allow
+            Principal:
+              AWS:
+                - !Sub "arn:${AWS::Partition}:iam::${AWS::AccountId}:root"
+            Action:
+              - sts:AssumeRole
+      Policies:
+        - PolicyName: ExecutionPolicy
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Sid: Sid0
+                Effect: Allow
+                Action:
+                  - "iam:CreateRole"
+                  - "iam:AttachRolePolicy"
+                  - "iam:PutRolePolicy"
+                  - "iam:PassRole"
+                  - "iam:DetachRolePolicy"
+                  - "iam:DeleteRolePolicy"
+                  - "iam:DeleteRole"
+                Resource:
+                  - !Sub "arn:${AWS::Partition}:iam::${AWS::AccountId}:role/OracleDbLTS-SystemsManagerAutomationAdministrationRole"
+                  - !Sub "arn:${AWS::Partition}:iam::${AWS::AccountId}:role/OracleDbLTS-SystemsManagerAutomationAdministrationRole"
+                  - !Sub "arn:${AWS::Partition}:iam::${AWS::AccountId}:role/OracleDbLTS-SystemsManagerAutomationExecutionRole"
+              - Sid: Sid1
+                Effect: Allow
+                Action:
+                  - "ssm:CreateDocument"
+                  - "ssm:DeleteDocument"
+                Resource:
+                  - !Sub "arn:${AWS::Partition}:ssm:*:${AWS::AccountId}:document/OracleDbLTS-DeleteInventory"
+                  - !Sub "arn:${AWS::Partition}:ssm:*:${AWS::AccountId}:document/OracleDbLTS-ManageLicenceUtilization"
+              - Sid: Sid2
+                Effect: Allow
+                Action:
+                  - "iam:GetRolePolicy"
+                  - "iam:GetRole"
+                  - "ssm:ListTagsForResource"
+                  - "ssm:DescribeDocument"
+                Resource: "*"
+              - Sid: Sid3
+                Effect: Allow
+                Action:
+                  - "sns:*"
+                  - "cloudformation:*"
+                Resource: "*"
+      Description: OracleDbLTS-CloudFormation-StackSetExecutionRole to enable use of CloudFormation Stacksets
+    DependsOn: StackSetAdministrationRole
 
   AutomationPermissionsStackSet:
     Type: AWS::CloudFormation::StackSet
