--- a/.github/workflows/test-alert-workflow.yml
+++ b/.github/workflows/test-alert-workflow.yml
@@ -1,12 +1,7 @@
-name: terraform apply (organisation-security)
+name: Test Alert Workflow
 
 on:
-  push:
-    paths:
-      - "organisation-security/terraform/**"
-      - "modules/**"
-      - ".github/workflows/organisation-security-plan.yml"
-      - ".github/workflows/organisation-security-apply.yml"
+  pull_request:
     branches:
       - main
 
@@ -16,29 +11,9 @@ jobs:
     permissions:
       id-token: write
       contents: read
-    defaults:
-      run:
-        working-directory: ./organisation-security/terraform
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-      - uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502 # v4.0.2
-        with:
-          role-to-assume: arn:aws:iam::${{secrets.AWS_SECURITY_ACCOUNT_ID}}:role/github-actions-apply
-          role-session-name: GitHubActions
-          aws-region: eu-west-2
-      - uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd # v3.1.2
-        with:
-          terraform_version: 1.7.5
-      - run: terraform fmt -check
-        continue-on-error: true
-      - run: terraform init
-      - run: terraform validate -no-color
-      - run: terraform plan -no-color
-      - run: terraform apply -auto-approve
-        if: github.event.ref == 'refs/heads/main'
-
       - name: Slack failure notification
-        if: ${{ failure() && github.ref == 'refs/heads/main' }}
         uses: slackapi/slack-github-action@37ebaef184d7626c5f204ab8d3baff4262dd30f0 # v1.27.0
         with:
           payload: |
@@ -74,5 +49,5 @@ jobs:
               ]
             }
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL_TESTING }}
           SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
