--- a/.github/workflows/entraid-scim-plan.yml
+++ b/.github/workflows/entraid-scim-plan.yml
@@ -71,10 +71,11 @@ jobs:
       - name: Send Terraform plan output to Slack
         uses: slackapi/slack-github-action@485a9d42d3a73031f12ec201c457e2162c45d02d #v2.0.0
         with:
+          errors: true
           token: ${{ env.AWS_ROOT_ACCOUNT_NOTIFICATIONS_SLACK_INFORMATION_SLACK_BOT_TOKEN }}
           method: files.uploadV2
           payload: |
             channel: ${{ env.AWS_ROOT_ACCOUNT_NOTIFICATIONS_SLACK_INFORMATION_SLACK_CHANNEL }}
             initial_comment: Terraform output attached!
-            file: "plan_output.txt"
-            filename: "plan-output-${{ github.run_id }}.txt"
+            file: plan_output.txt
+            filename: plan-output.txt
