--- a/.github/workflows/entraid-scim-plan.yml
+++ b/.github/workflows/entraid-scim-plan.yml
@@ -83,6 +83,7 @@ jobs:
         id: second-slack-message
         uses: slackapi/slack-github-action@485a9d42d3a73031f12ec201c457e2162c45d02d #v2.0.0
         with:
+          error: true
           webhook: ${{ env.SLACK_INCOMING_WEBHOOK }}
           webhook-type: incoming-webhook
           payload: |
