--- a/.github/workflows/entraid-scim-plan.yml
+++ b/.github/workflows/entraid-scim-plan.yml
@@ -88,7 +88,7 @@ jobs:
           webhook-type: incoming-webhook
           payload: |
             thread_ts: "${{ steps.slack_message.outputs.ts }}"
-            text: "${{ env.TF_PLAN_OUT}}"
+            text: "TEST"
 
       # - name: Send Terraform plan output to Slack
       #   uses: slackapi/slack-github-action@485a9d42d3a73031f12ec201c457e2162c45d02d #v2.0.0
