--- a/.github/workflows/entraid-scim-plan.yml
+++ b/.github/workflows/entraid-scim-plan.yml
@@ -84,9 +84,10 @@ jobs:
         uses: slackapi/slack-github-action@485a9d42d3a73031f12ec201c457e2162c45d02d #v2.0.0
         with:
           errors: true
-          webhook: ${{ env.SLACK_INCOMING_WEBHOOK }}
-          webhook-type: incoming-webhook
+          token: ${{ env.AWS_ROOT_ACCOUNT_NOTIFICATIONS_SLACK_INFORMATION_SLACK_BOT_TOKEN }}
+          method: chat.postMessage
           payload: |
+            channel: ${{ env.AWS_ROOT_ACCOUNT_NOTIFICATIONS_SLACK_INFORMATION_SLACK_CHANNEL }}
             thread_ts: "${{ steps.slack_message.outputs.ts }}"
             text: "TEST"
 
