--- a/.gitleaksignore
+++ b/.gitleaksignore
@@ -1,3 +1,5 @@
 60e8f406be4219b01e7363d1de37662c3a020707:organisation-security/terraform/cloudformation/OracleDbLTS-Orchestrate.yaml:generic-api-key:279
 c8883ab61007bebe110b62740442731d314436c1:organisation-security/terraform/.terraform.lock.hcl:square-access-token:19
 a9c7860510294cbe869c57b673e85eaba530e328:management-account/terraform/.terraform.lock.hcl:square-access-token:19
+2f5ddb2d7074b526c86cea22c532168b388f6ac7:organisation-security/terraform/cloudformation/OracleDbLTS-Orchestrate.yaml:generic-api-key:311
+c80afeec1bd0a0d7fbd37c3eeff2ba10844d48bb:organisation-security/terraform/cloudformation/OracleDbLTS-Orchestrate.yml:generic-api-key:278
