--- a/.github/workflows/organisation-security-plan.yml
+++ b/.github/workflows/organisation-security-plan.yml
@@ -32,4 +32,4 @@ jobs:
         continue-on-error: true
       - run: terraform init
       - run: terraform validate -no-color
-      - run: terraform plan -no-color | ./scripts/redaction.sh
+      - run: terraform plan -no-color | ../../scripts/redaction.sh
