--- a/.github/workflows/organisation-security-apply.yml
+++ b/.github/workflows/organisation-security-apply.yml
@@ -33,8 +33,8 @@ jobs:
         continue-on-error: true
       - run: terraform init
       - run: terraform validate -no-color
-      - run: terraform plan -no-color | ./scripts/redaction.sh
-      - run: terraform apply -auto-approve | ./scripts/redaction.sh
+      - run: terraform plan -no-color | ../../scripts/redaction.sh
+      - run: terraform apply -auto-approve | ../../scripts/redaction.sh
         if: github.event.ref == 'refs/heads/main'
 
       - name: Slack failure notification
