--- a/.github/workflows/organisation-security-plan.yml
+++ b/.github/workflows/organisation-security-plan.yml
@@ -32,6 +32,7 @@ jobs:
         continue-on-error: true
       - run: terraform init
       - run: terraform validate -no-color
-      - run: |
+      - name: Terraform plan
+        run: |
           set -o pipefail
           terraform plan | ../../scripts/redaction.sh
