--- a/.github/workflows/organisation-security-apply.yml
+++ b/.github/workflows/organisation-security-apply.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Terraform apply
         run: |
           set -o pipefail
-          terraform apply | ../../scripts/redaction.sh
+          terraform apply -auto-approve | ../../scripts/redaction.sh
         if: github.event.ref == 'refs/heads/main'
 
       - name: Slack failure notification
