Modify org-sec provider role assumption logic
This changes the name of the github actions sessions appending plan and apply so that we can differentiate them.

We then update the org-sec providers so that they use the readonly role for the plan session, and the OrganizationAccountAccessRole for anything else (github actions apply and local applies).

--- a/.github/workflows/management-account-plan.yml
+++ b/.github/workflows/management-account-plan.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: aws-actions/configure-aws-credentials@b47578312673ae6fa5b5096b330d9fbac3d116df # v4.2.1
         with:
           role-to-assume: arn:aws:iam::${{secrets.AWS_ROOT_ACCOUNT_ID}}:role/github-actions-plan
-          role-session-name: GitHubActions
+          role-session-name: GitHubActionsPlan
           aws-region: eu-west-2
       - uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd # v3.1.2
         with:
