--- a/.github/workflows/management-account-plan.yml
+++ b/.github/workflows/management-account-plan.yml
@@ -43,7 +43,10 @@ jobs:
           plan_exit_code=${PIPESTATUS[0]}  
           echo "Plan Exit Code: ${plan_exit_code}"
           echo "plan_exit_code=${plan_exit_code}" >> "$GITHUB_OUTPUT"
-          [ "$plan_exit_code" -eq 1 ] && echo "Terraform plan failed." && exit 1
+          if [ "$plan_exit_code" -ne 0 ] && [ "$plan_exit_code" -ne 2 ]; then
+            echo "::error title=Terraform Plan Failed::Unexpected exit code $plan_exit_code (expected 0 or 2)"
+            exit "$plan_exit_code"
+          fi
 
       - name: Alert Slack if drift detected on scheduled run
         if: ${{ (github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || github.event_name == 'pull_request') && steps.terraform-plan.outputs.plan_exit_code == '2' }}
